o fixed broken layout (windowpane on bottom) after opening dialog and option panes in IE
git-svn-id: https://j-wings.svn.sourceforge.net/svnroot/j-wings/wings3/trunk@4195 c8af5dc8-8010-0410-93ac-e0f74e17e1d8

--- a/wings/src/res/org/wings/plaf/css/all.css
+++ b/wings/src/res/org/wings/plaf/css/all.css
@@ -724,6 +724,9 @@ table.DivisionContent {
     width:0;
     height:0;
     display:block;
+    position:absolute;
+    top:-1000px;
+    left:-1000px;
 }
 
 /* --- DEBUGCONSOLE -------------------------------------------------------- */
